sc/social/bookmarks/browser/sb_resources/social_bookmark.css
.portlet .sc_social_bookmarks .bookmark_id { display:none; }

#document-action-socialbookmark {
    display:block;
    float:right; }
#document-action-socialbookmark a,
#document-action-socialbookmark a:hover,
#document-action-socialbookmark a:visited {padding:1px;}

.sc_social_bookmarks li a {
    color:black;
    font-size:90%;
    font-weight:bold;
}
.sc_social_bookmarks ul { 
    list-style-image:none;
    list-style-type:none;
}
.sc_social_bookmarks li {
    display: block;
    float: left;
    height: 20px;
}
.sc_social_bookmarks_viewlet li {
    width:30%;
}
.sc_social_bookmarks_viewlet {
    position:relative;
}
.sc_social_bookmarks_overlay {
    /* display:none; */
    position: absolute;
    z-index: 1;
    padding:10px;
}
.sc_social_bookmarks_wrapper {
    border:1px solid black;
}

